--- a/app/src/main/res/drawable/shortcut_ic_logs.xml
+++ b/app/src/main/res/drawable/shortcut_ic_logs.xml
@@ -4,7 +4,7 @@
     <foreground>
         <!-- 44dp icon scaled to 52dp in 72dp, padding = (1-52/44*24/72)/2 -->
         <inset
-            android:drawable="@drawable/ic_modules"
+            android:drawable="@drawable/ic_assignment"
             android:inset="30.303%" />
     </foreground>
 </adaptive-icon>
