--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -4,11 +4,33 @@
         android:enabled="true"
         android:icon="@drawable/shortcut_ic_modules"
         android:shortcutId="modules"
-        android:shortcutLongLabel="@string/nav_item_modules"
-        android:shortcutShortLabel="@string/nav_item_modules">
+        android:shortcutLongLabel="@string/Modules"
+        android:shortcutShortLabel="@string/Modules">
         <intent
             android:action="android.intent.action.MAIN"
             android:targetClass="io.github.lsposed.manager.ui.activity.ModulesActivity"
+            android:targetPackage="io.github.lsposed.manager" />
+    </shortcut>
+    <shortcut
+        android:enabled="true"
+        android:icon="@drawable/shortcut_ic_apps"
+        android:shortcutId="apps"
+        android:shortcutLongLabel="@string/Apps"
+        android:shortcutShortLabel="@string/Apps">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetClass="io.github.lsposed.manager.ui.activity.AppListActivity"
+            android:targetPackage="io.github.lsposed.manager" />
+    </shortcut>
+    <shortcut
+        android:enabled="true"
+        android:icon="@drawable/shortcut_ic_logs"
+        android:shortcutId="log"
+        android:shortcutLongLabel="@string/Logs"
+        android:shortcutShortLabel="@string/Logs">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetClass="io.github.lsposed.manager.ui.activity.LogsActivity"
             android:targetPackage="io.github.lsposed.manager" />
     </shortcut>
 </shortcuts>
