--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,8 +9,6 @@
     <color name="warning">@color/red_500</color>
     <color name="download_status_update_available">#4CAF50</color>
     <color name="amber_500">#FFC107</color>
-    <color name="navigationBarColor">?colorPrimary</color>
-    <color name="colorStickyHeader">#eafafafa</color>
-    <color name="ic_launcher_background">#35C0CA</color>
+    <color name="navigationBarColor">@color/colorPrimary</color>
     <color name="navigationBarColorBlack">@android:color/black</color>
 </resources>
