Revert "Use colorPrimarySurface for master switch"
This reverts commit 53430efb

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
 
     <style name="MasterSwitch" parent="@style/ThemeOverlay.AppCompat.Dark">
         <item name="masterSwitchBackgroundOff">#80868b</item>
-        <item name="masterSwitchBackgroundOn">?colorPrimarySurface</item>
+        <item name="masterSwitchBackgroundOn">?colorAccent</item>
         <item name="masterSwitchTextAppearance">@style/MasterSwitch.TextAppearance</item>
         <item name="switchStyle">@style/MasterSwitch.Switch</item>
     </style>
