--- a/app/src/main/res/menu/menu_app_list.xml
+++ b/app/src/main/res/menu/menu_app_list.xml
@@ -15,6 +15,10 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/use_recommended"
+        android:title="@string/use_recommended" />
+
+    <item
         android:id="@+id/item_show_games"
         android:checkable="true"
         android:checked="true"
